ec2/prod/03_security_group.tf
resource "aws_security_group" "sg_web" {
  name        = "sg-web"
  description = "web"
#  vpc_id      = aws_vpc.main.id

  ingress {
  #  description      = "TLS from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = [var.office_cidr_block]
  #  ipv6_cidr_blocks = [aws_vpc.main.ipv6_cidr_block]
  }

  

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

}

# Hay que exportar los sg ids y pasarlos al instance.tf
